updated/completed homepage interfaces

--- a/electronpay/homepage/home.css
+++ b/electronpay/homepage/home.css
@@ -36,11 +36,9 @@ a {
 }
 
 .nav {
-    /* position: fixed; */
     width: 100%;
     z-index: 5;
     border: 1px solid;
-    /* padding: 10px 50px; */
 }
 
 .nav-header {
@@ -72,9 +70,11 @@ a {
 }
 
 .menu-nav {
-    padding: 20px 50px;
+    padding: 0 50px;
     font-weight: 600;
-    /* display: none; */
+    height: 0;
+    overflow: hidden;
+    transition: var(--btn-sole-transition);
 }
 
 .menu-nav__list {
@@ -85,7 +85,6 @@ a {
 }
 
 .menu-nav__link {
-    /* border: 1px solid; */
     display: block;
     padding: 20px 0;
 }
@@ -187,6 +186,88 @@ header {
     width: 100%;
 }
 
+#services {
+    text-align: center;
+    padding: 50px 0;
+    background-color: rgba(238, 238, 238, 0.535);
+}
+
+#plans-pricing {
+    padding: 50px 0;
+}
+
+.plans-and-pricing,
+.how-it-works {
+    display: grid;
+    grid-gap: 20px;
+    padding: 20px 100px;
+}
+
+.section-title {
+    text-align: center;
+    padding: 20px;
+    font-size: 35px;
+}
+
+.plan-template {
+    border: 1px solid;
+    /* height: 400px; */
+    height: max-content;
+    box-shadow: 0 0 5px black;
+    position: relative;
+}
+
+ .plan-template:nth-child(2)::after,
+ .plan-template:nth-child(3)::after 
+ {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(51, 51, 51, 0.46);
+}
+
+.plan-template__pricetag {
+    text-align: center;
+    padding-bottom: 15px;
+}
+
+.plan-template__pricetag h5 {
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 3px solid;
+    background-color: #333;
+    color: white;
+}
+
+.plan-template__pricetag p {
+    letter-spacing: 5px;
+    font-weight: bold;
+    font-size: 25px;
+    padding-top: 10px;
+}
+
+.plan-template .functionalities {
+    padding: 10px 50px;
+    font-style: italic;
+}
+
+@media screen and (min-width: 700px) {
+    .plans-and-pricing,
+    .how-it-works {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .plans-and-pricing,
+    .how-it-works {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
 .register-account {
     padding: 50px;
     background: linear-gradient(to bottom, red, darkred, rgb(49, 1, 16))
@@ -227,23 +308,8 @@ header {
     color: var(--btn-big-bg-color);
 }
 
-.plans {
-    display: grid;
-    grid-gap: 20px;
-    padding: 20px 50px;
+.footer {
+    text-align: center;
+    padding: 20px;
 }
 
-.plan-template {
-    border: 1px solid;
-    height: 250px;
-}
-
-.plan-template h5 {
-    padding: 10px;
-    border: 1px solid;
-    background-color: #bbb;
-}
-
-.plan-template .functionalities {
-    padding: 10px 30px;
-}
