--- a/electronpay/homepage/home.css
+++ b/electronpay/homepage/home.css
@@ -168,7 +168,6 @@ header {
     background-color: rgba(255, 196, 0, 0.659);
     position: relative;
     z-index: 0;
-    /* color: white; */
 }
 
 .catchphrase-btn::after {
@@ -246,4 +245,183 @@ header {
 
 .plan-template .functionalities {
     padding: 10px 30px;
+}
+
+.nav-header-other{
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid red;
+    padding: 20px 50px;
+    box-shadow: 0 0 20px black;
+}
+
+.nav-header-other .nav-toggler{
+    margin-right: 50px;
+}
+
+.menu-nav.other-menu{
+    width: 30%;
+}
+
+.container{
+    display: flex;
+}
+
+#receipt-table{
+    width: 70%;
+}
+
+#receipt-table {
+    border-collapse: collapse;
+    padding-top: 70%;
+    padding-bottom: 70%;
+}
+
+.receipts{
+    padding-top: 70px;
+    padding-bottom: 70px;
+    margin-left: auto;
+    margin-right: auto;
+}
+  
+#receipt-table td, #receipt-table th {
+    border: 1px solid #ddd;
+    padding: 14px;
+}
+
+#receipt-table tr:nth-child(even){
+    background-color: #f2f2f2;
+}
+
+#receipt-table tr:hover {
+    background-color: #ddd; cursor:pointer
+}
+
+#receipt-table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #960000;
+    color: white;
+}
+
+.receipt-details, .add-receipt{
+    margin-top: 60px;
+    margin-bottom: 60px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.back-btn{
+    width: 30%;
+    float: right;
+}
+
+.search-box{
+    width: 70%;
+    display: block;
+    margin: 0 auto 65px auto;
+    padding: 12px;
+    background-color:  white;
+    color: black;
+}
+
+input::placeholder{
+    color: #353333;
+}
+
+#filter {
+    background-image: url('./images-logo/searchicon.png');
+    background-position: 10px 10px;
+    background-repeat: no-repeat;
+    font-size: 16px;
+    padding: 12px 20px 12px 40px;
+    border: 1px solid black;
+    margin-bottom: 12px;
+}
+
+.new-receipt{
+    margin-bottom: 50px;
+}
+
+.add-receipt input[type=text], 
+.add-receipt input[type=email], 
+.add-receipt select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+.add-receipt input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+  
+.add-receipt input[type=submit]:hover {
+    background-color: #45a049;
+}
+  
+div.add-receipt{
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+
+div.add-new{
+    width: 50%;
+}
+
+.add-new h2{
+    color: #b50000;
+}
+
+.catchphrase-btn.submit{
+    border-radius:13px;
+    cursor: pointer;
 }
