--- a/electronpay/homepage/home.css
+++ b/electronpay/homepage/home.css
@@ -497,3 +497,103 @@ div.add-new{
     border-radius:13px;
     cursor: pointer;
 }
+
+@media only screen 
+and (max-width: 1024px) {
+    #receipt-table{
+        width: 100%;
+        padding:0;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .new-receipt {
+        margin-bottom: 35px;
+        margin-left: 30px;
+    }
+
+    .container{
+        display: block;
+    }
+
+    div.add-new {
+        width: 70%;
+    }
+}
+
+@media only screen 
+and (max-width: 768px)  {
+    #receipt-table{
+        width: 90%;
+        padding:0;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .container{
+        display: block;
+    }
+
+    .menu-nav.other-menu {
+        width: 100%;
+    }
+
+    .new-receipt {
+        margin-bottom: 35px;
+        margin-left: 30px;
+    }
+
+    .catchphrase-btn{
+        padding: 10px 22px;
+    }
+    #receipt-table, 
+    .receipt-list thead, 
+    .receipt-list tbody, 
+    .receipt-list th, 
+    .receipt-list td, 
+    .receipt-list tr {
+        display: block;
+    }
+
+    .receipt-list thead tr {
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+    }
+
+    .receipt-list tr {
+      margin: 0 0 1rem 0;
+    }
+      
+    .receipt-list tr:nth-child(odd) {
+      background: #ccc;
+    }
+    
+    .receipt-list td {
+        border: none;
+        border-bottom: 1px solid #eee;
+        position: relative;
+        padding-left: 50%;
+    }
+
+    .receipt-list td:before {
+        position: absolute;
+        top: 0;
+        left: 6px;
+        width: 45%;
+        padding-right: 10px;
+        white-space: nowrap;
+    }
+
+    div.add-new {
+        width: 93%;
+    }
+
+    .receipt-list td:nth-of-type(1):before { content: "Business Name"; }
+    .receipt-list td:nth-of-type(2):before { content: "Purchase Date"; }
+    .receipt-list td:nth-of-type(3):before { content: "Phone Number"; }
+    .receipt-list td:nth-of-type(4):before { content: "Email"; }
+    .receipt-list td:nth-of-type(5):before { content: "Type"; }
+    .receipt-list td:nth-of-type(6):before { content: "Due Date"; }
+    .receipt-list td:nth-of-type(7):before { content: "Total Amount"; }
+}
