--- a/electronpay/css/styles.css
+++ b/electronpay/css/styles.css
@@ -11,7 +11,6 @@
 }
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  
 }
 a {
   text-decoration: none;
@@ -51,7 +50,7 @@ a {
   font-size: 20px;
   padding: 0;
   background-color: inherit;
-  transition: var(--btn-sole-transition);
+  cursor: pointer;
 }
 .nav-toggler:hover {
   transform: rotate(450deg);
@@ -100,7 +99,7 @@ a {
 }
 .btn-start1{
   width: 100%;
-  background-color:red;
+  background-color: #600007;
   border: none;
 }
 .btn-start2:hover{
@@ -132,6 +131,19 @@ input[type=text],input[type=password],input[type=email]{
 }
 .bg-body{
   background-color:  rgb(228,248,245)
-  
-
+}
+.btn-primary:hover {
+  color: #fff;
+  background-color: #b20000;
+  border-color: #830001;
+}
+.btn-primary{
+  background-color: #830001;
+}
+.form-control:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #5d0008;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgb(118 0 3);
 }
