--- a/electronpay/css/home.css
+++ b/electronpay/css/home.css
@@ -3,20 +3,24 @@
     --btn-sole-transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 1000ms;
     --btn-big-bg-color: rgb(255, 196, 0);
 }
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
 }
+
 a {
     text-decoration: none;
     color: black;
     font-weight: 600;
 }
+
 .support-section {
     padding: 10px 50px;
     background-color: black;
@@ -24,15 +28,18 @@ a {
     font-weight: 700;
     cursor: pointer;
 }
+
 .support-section i {
     color: red;
     font-size: 20px;
 }
+
 .nav {
     width: 100%;
     z-index: 5;
     border: 1px solid;
 }
+
 .nav-header {
     display: flex;
     justify-content: space-between;
@@ -41,20 +48,24 @@ a {
     padding: 20px 50px;
     box-shadow: 0 0 20px black;
 }
+
 #brand-logo img {
     height: 45px;
 }
+
 .nav-toggler {
     border: none;
     outline: none;
     font-size: 20px;
     padding: 0;
     background-color: inherit;
-    cursor: pointer;
+    transition: var(--btn-sole-transition);
 }
+
 .nav-toggler:hover {
     transform: rotate(450deg);
 }
+
 .menu-nav {
     padding: 0 50px;
     font-weight: 600;
@@ -62,65 +73,78 @@ a {
     overflow: hidden;
     transition: var(--btn-sole-transition);
 }
+
 .menu-nav__list {
     padding: 0 0 20px 0;
     margin-bottom: 20px;
     list-style-type: none;
     border-bottom: 2px solid #ddd;
 }
+
 .menu-nav__link {
     display: block;
     padding: 20px 0;
 }
+
 .menu-btn__sign {
     border: 1px solid var(--red-bg-color);
     padding: 10px 30px;
     border-radius: 2%;
     transition: var(--btn-sole-transition);
 }
+
 .menu-btn .menu-btn__sign:nth-of-type(2) {
     margin-left: 5px;
     background-color: var(--red-bg-color);
     color: white;
 }
+
 .menu-btn .menu-btn__sign:first-of-type:hover,
 .menu-btn .menu-btn__sign:nth-of-type(2):hover {
     background-color: #333;
     color: white;
 }
+
 header {
     background: linear-gradient(to top, red, darkred, rgb(49, 1, 16))
 }
+
 .brand-logo-rotate {
     text-align: center;
     margin-bottom: 30px;
     padding: 5px;
     border-bottom: 1px solid #eee;
 }
+
 .brand-logo-rotate img {
     animation-name: rotate;
     animation-duration: 5s;
     animation-iteration-count: infinite;
 }
+
 @keyframes rotate {
     100% {
         transform: rotate(720deg);
     }
 }
+
 .catchphrases {
     max-width: 900px;
     padding: 50px;
     margin: 0 auto;
     color: white;
 }
+
 .catchphrases h5 {
     margin: 20px 0;
 }
+
 .catchphrases h2 {
     line-height: 35px;
     margin-bottom: 20px;
     font-size: 2rem;
 }
+
 .catchphrase-btn {
     display: inline-block;
     border: 1px solid;
@@ -128,10 +152,12 @@ header {
     padding: 10px 50px;
     outline: none;
     text-align: center;
+    font-size: 18px;
     background-color: rgba(255, 196, 0, 0.659);
     position: relative;
     z-index: 0;
 }
+
 .catchphrase-btn::after {
     content: "";
     position: absolute;
@@ -143,34 +169,46 @@ header {
     z-index: -1;
     transition: var(--btn-sole-transition);
 }
+
 .catchphrase-btn:hover::after {
     width: 100%;
 }
+
 #services {
     text-align: center;
     padding: 50px 0;
     background-color: rgba(238, 238, 238, 0.535);
 }
+
+.how-templates {
+    padding: 0 30px;
+}
+
 #plans-pricing {
     padding: 50px 0;
 }
+
 .plans-and-pricing,
 .how-it-works {
     display: grid;
-    grid-gap: 20px;
+    grid-gap: 35px;
     padding: 20px 100px;
 }
+
 .section-title {
     text-align: center;
     padding: 20px;
     font-size: 35px;
 }
+
 .plan-template {
     border: 1px solid;
     height: max-content !important;
     box-shadow: 0 0 5px black;
     position: relative;
+    font-style: italic;
 }
+
  .plan-template:nth-child(2)::after,
  .plan-template:nth-child(3)::after 
  {
@@ -182,10 +220,12 @@ header {
     width: 100%;
     background-color: rgba(51, 51, 51, 0.46);
 }
+
 .plan-template__pricetag {
     text-align: center;
     padding-bottom: 15px;
 }
+
 .plan-template__pricetag h5 {
     padding: 10px;
     margin-bottom: 15px;
@@ -193,93 +233,114 @@ header {
     background-color: #333;
     color: white;
 }
+
 .plan-template__pricetag p {
-    letter-spacing: 5px;
+    letter-spacing: 2px;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 22px;
     padding-top: 10px;
 }
+
 .plan-template .functionalities {
-    padding: 10px 50px;
-    font-style: italic;
+    padding: 10px 10px;
+    margin: 10px 20px;
+    list-style-type: square;
 }
+
 @media screen and (min-width: 700px) {
     .plans-and-pricing,
     .how-it-works {
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
 @media screen and (min-width: 1000px) {
     .plans-and-pricing,
     .how-it-works {
         grid-template-columns: repeat(3, 1fr);
     }
 }
+
 .login-account {
     padding: 50px;
     background: linear-gradient(to bottom, red, darkred, rgb(49, 1, 16))
 }
+
 .form-terms-policy {
     max-width: 600px;
     margin: 0 auto;
 }
+
 .login-account h2 {
     margin-bottom: 25px;
     color: white;
 }
+
 .login-form {
     display: grid;
-    grid-gap: 15px
+    grid-gap: 10px
 }
+
 .login-account input {
     padding: 15px;
     outline: none;
     font-style: italic;
 }
+
 .alert-text {
-    font-size: 8px;
+    font-size: 10px;
     text-transform: lowercase;
     font-style: italic;
-    height: 3px;
 }
+
 .login-account .catchphrase-btn {
     margin-top: 10px;
 }
+
 .login-account p {
     color: white;
     margin-top: 20px;
 }
+
 .login-account p a {
     text-decoration: underline;
     color: var(--btn-big-bg-color);
 }
+
 .input-pass-indicator {
     border: 2px solid green;
 }
+
 .input-fail-indicator {
     border: 2px solid orange;
 }
+
 .footer {
     text-align: center;
     padding: 20px;
 }
+
 .plans {
     display: grid;
     grid-gap: 20px;
     padding: 20px 50px;
 }
+
 .plan-template {
     border: 1px solid;
     height: 250px;
 }
+
 .plan-template h5 {
     padding: 10px;
     border: 1px solid;
     background-color: #bbb;
 }
+
 .plan-template .functionalities {
     padding: 10px 30px;
 }
+
 .nav-header-other{
     display: flex;
     align-items: center;
@@ -287,9 +348,11 @@ header {
     padding: 20px 50px;
     box-shadow: 0 0 20px black;
 }
+
 .nav-header-other .nav-toggler{
     margin-right: 50px;
 }
+
 .menu-nav.other-menu{
     width: 30%;
 }
